--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=DM+Serif+Display:ital@0;1&family=Outfit:wght@100..900&family=Pacifico&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo:ital,wght@0,100..900;1,100..900&family=DM+Serif+Display:ital@0;1&family=LXGW+WenKai+Mono+TC&family=Outfit:wght@100..900&family=Pacifico&family=Titan+One&display=swap');
 * {
     box-sizing: border-box;
     text-decoration: none;
@@ -17,7 +16,6 @@ button {
 
 .wrapper {
     max-width: 1200px;
-    padding: 0 20px;
     margin: 0 auto;
 }
 
@@ -30,7 +28,9 @@ button {
 h1 {
     font-size: 70pt;
     font-family: "Pacifico", cursive; /*꼬부랑글씨*/
-    font-weight: 400;
+    font-weight: 600;
+    letter-spacing: 5PX;
+    line-height: 1.4;
 }
 
 .main-story {
@@ -43,5 +43,6 @@ h1 {
 :root {
     --light-purple: rgb(244, 239, 250);
     --default-grey: rgb(47, 47, 47);
+    --default-heading-color: color: rgb(32, 29, 29);
 }
 
