--- a/css/desktop.css
+++ b/css/desktop.css
@@ -65,7 +65,7 @@ main {
             background-repeat: no-repeat;
             background-size: cover;
 
-            .wrapper {                
+            .wrapper {
                 .background-img {
                     display: flex;
                     justify-content: end;
@@ -79,6 +79,7 @@ main {
                             left: 0;
                             top: 500px;
                         }
+
                         .vector5 {
                             width: 80px;
                             position: absolute;
@@ -86,6 +87,7 @@ main {
                             left: 550px;
                             top: 200px;
                         }
+
                         .vector4 {
                             width: 50px;
                             position: absolute;
@@ -143,6 +145,7 @@ main {
                         top: 1000px;
                         transform: rotate(125deg);
                     }
+
                     .vector9 {
                         width: 90px;
                         position: absolute;
@@ -187,6 +190,7 @@ main {
                         top: 2000px;
                         transform: rotate(315deg);
                     }
+
                     .vector11 {
                         width: 50px;
                         position: absolute;
@@ -195,6 +199,7 @@ main {
                         top: 2300px;
                     }
                 }
+
                 .sharing-introduction {
                     display: flex;
                     align-items: center;
@@ -321,6 +326,7 @@ main {
         .wrapper {
             display: flex;
             justify-content: end;
+
             .search-container {
                 display: flex;
 
@@ -351,9 +357,14 @@ main {
             }
         }
     }
-    .zealandia, .shop-section-new, .shop-section-favorites, .shop-section-outdoor {
+
+    .zealandia,
+    .shop-section-new,
+    .shop-section-favorites,
+    .shop-section-outdoor {
         padding-bottom: 20px;
     }
+
     .zealandia {
         .wrapper {
             img {
@@ -361,46 +372,65 @@ main {
             }
         }
     }
-    .new-grid, .favorite-grid {
+
+    .shop-section-new {
+        .new-grid {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
         gap: 50px;
-
-        width: 100%;
         padding-bottom: 40px;
-    }
-
-    .product-container {
         .product-pic {
-            width: 200px;
+            width: 100%;
         }
+    
         .product-content {
             text-align: center;
         }
-    }   
-
-    .shop-section-new {
-        display: flex;
+        }
     }
-
     .shop-section-favorites {
-        display: flex;
+        .favorite-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+            gap: 50px;
+            padding-bottom: 40px;
+        }
+    
+        .product-container {
+            text-align: center;
+            position: relative;
+        }
+    
+        .product-pic {
+            width: 100%;
+            max-width: none; 
+            height: auto;
+            display: block;
+        }
+    
+        .product-content {
+            text-align: center;
+        }
     }
 
     .shop-section-outdoor {
         .outdoor-container {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
             gap: 10px;
         }
-        .outdoor-left, .outdoor-right {
+
+        .outdoor-left,
+        .outdoor-right {
             display: flex;
             flex-direction: column;
+
             .product-pic {
                 max-width: 100%;
             }
         }
     }
+
     /* shop part ends */
 
     /* sale part starts */
@@ -408,17 +438,19 @@ main {
     .sale-container {
         .wrapper {
             display: flex;
+
             .sale-aside {
                 display: flex;
                 height: fit-content;
                 padding-top: 20px;
+
                 .filters {
                     display: flex;
                     flex-direction: column;
                     background-image: url(../assets/blur3.png);
                     width: 200px;
                     padding: 40px 0 40px 40px;
-    
+
                     h3 {
                         font-size: 30px;
                         padding-bottom: 20px;
@@ -428,17 +460,20 @@ main {
                         position: relative;
                         display: inline-block;
                         height: fit-content;
+
                         .dropbtn {
                             font-size: 17px;
                             padding-top: 10px;
                             border: none;
                             cursor: pointer;
+
                             img {
                                 width: 20px;
                                 vertical-align: middle;
                                 /* 텍스트와 이미지의 중앙 정렬 flex는 안되고 inline만 가능 */
                             }
                         }
+
                         .dropdown-content {
                             display: none;
                             position: relative;
@@ -446,55 +481,56 @@ main {
                             min-width: 160px;
                             padding: 12px 16px;
                             z-index: 1;
+
                             .each-input {
                                 padding-bottom: 10px;
                             }
                         }
                     }
-                    
+
                     .dropdown:hover .dropdown-content {
                         display: block;
                     }
                 }
             }
-        
+
             .sale-section-1 {
-                display: flex;
-                flex-direction: column;
+                width: 100%;
                 padding-left: 80px;
+
                 h2 {
                     font-size: 60px;
                     padding: 40px 0;
                 }
-    
+
                 .item-grid {
                     display: grid;
-                    grid-template-columns: repeat(4, 1fr);
-                    gap: 50px;
-    
+                    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+                    gap: 30px;
                     width: 100%;
                     padding-bottom: 40px;
-    
+
                     .product-container {
                         text-align: center;
                         position: relative;
-    
+
                         .product-pic {
-                            width: 200px;
+                            width: 100%;
+                            max-width: 200px;
                             z-index: 1;
                         }
-    
+
                         .tag-container {
                             position: absolute;
                             z-index: 2;
                             left: 0;
                             top: 0;
-    
+
                             .sale-mark {
                                 width: 70px;
                             }
                         }
-    
+
                         .product-content {
                             background-color: var(--light-purple);
                         }
@@ -503,11 +539,11 @@ main {
             }
         }
     }
-    
+
 
     /* sale part ends */
 
-    /* about part starts */    
+    /* about part starts */
     .introduce-us {
         .wrapper {
             display: flex;
@@ -524,6 +560,7 @@ main {
                     width: 100%;
                     max-width: 600px;
                     overflow: hidden;
+
                     img {
                         width: 100%;
                         height: 100%;
@@ -531,6 +568,7 @@ main {
                         object-position: center;
                         display: block;
                     }
+
                     .desc {
                         position: absolute;
                         bottom: 0;
@@ -542,35 +580,58 @@ main {
                         box-sizing: border-box;
                     }
                 }
+
                 .gallery:hover {
                     opacity: 0.5;
                 }
             }
+
             .under-box {
                 display: flex;
                 text-align: center;
                 align-items: center;
                 justify-content: center;
                 padding: 80px 0;
+
                 .story-content {
                     p {
                         padding: 0 140px;
                         font-size: 20px;
                         color: rgb(71, 70, 70);
                     }
+
                     p::before {
                         content: open-quote;
-                    }   
+                    }
+
                     p::after {
                         content: close-quote;
-                    } 
+                    }
                 }
             }
         }
     }
+
     /* about part ends */
 
-} /*main*/
+    /* contact part starts */
+    .contact-section {
+        .wrapper {
+            .input-info {
+                a {
+                    padding: 10px;
+                    background: rgb(156, 156, 243);
+                    margin: 0 30px 0px 5px;
+                    border-radius: 10px;
+                }
+            }
+        }
+    }
+
+    /* contact part ends */
+}
+
+/*main*/
 
 footer {
     background-image: url(../assets/background-blurr.png);
